Add list to index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Hello World!</h1>
     <p>Paragraph1</p>
+    <li>
+        <ul>list one</ul>
+        <ul>list two</ul>
+    </li>
 </body>
 </html>
